# llm-seasonality

./: .gitignore  LABNOTES.md  LICENSE  llm-seasonality.code-workspace  pyproject.toml
llm_seasonality/: cli.py  models.py  utils.py
llm_seasonality/prompt/: __init__.py  base.py  gsm8k.py
