[tool.poetry]
name = "llm-seasonality"
version = "0.1.0"
description = ""
authors = ["Leigh Johnson <leigh@printnanny.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.36.1"
datasets = "^2.15.0"
click = "^8.1.7"
docker = "^7.0.0"
torch = "^2.1.2"
pydantic = "^2.5.2"
accelerate = "^0.25.0"
tqdm = "^4.66.1"
evaluate = {extras = ["template"], version = "^0.4.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
